tests/negative/syntax/bad_syntax.stream
// ERROR: Syntax Error
if true {
    print("Hello")
// Missing '}' here